
	* IgProfTrace.h, IgProfTrace.cc: New, a relocatable data gathering
	buffer explicitly optimised for collecting profile data.

	* IgProf.h, IgProf.cc: Adjust to using IgProfTrace.  Report
	individual resource leaks.  Fix the communication in an unclean
	exit, the profiler no longer hangs when ROOT calls "exit()" from
	signal handlers, threads are not closed and destructors run.

2007-03-13  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse (igprof_filter_by_lib_pre): Fix typo.
	(readDump): Use '@{lib+off}' instead of '@(lib+off)' to help
	kcachegrind parse the final output more sensibly.

2007-02-22  Lassi A. Tuura  <lat@iki.fi>

	* IgProfPerf.cc: Set SA_SIGINFO when setting up the signal.

2007-02-16  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Add option to convert data to callgrind format.

2007-02-15  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse (merge_to_node): Merge to parent's structure from
	the source node, not from the parent itself (duh!).

	* IgProf.cc (initialize): Increment the right pointer in handling
	the dump flag option.

	* IgProf.cc (initialize): Move all options parsing here including
	output file name.  Add new option to specify a file whose
	existence triggers an intermediate profile dump.
	(profileReadHunk): Don't shadow "fd" variable name.
	(profileListenThread): Dump if profile dump trigger file exists.
	(dump): Remove parsing of profile options, now in initialisation.
	Disable leak map output, it's currently just waste of space.

	* IgProfPerf.cc (profileSignalHandler): Drop one less frame from
	the bottom of the stack.  Not sure if this was changed with the
	IgHookTrace::stacktrace() improvements, but definitely now better.
	(enableSignalHandler): Use sigaction(SA_RESTART), not signal().

	* IgProfPool.cc: Initialise two mappings in constructor so we
	initially have a buffer to swap to when the first buffer fills up.
	Rationale is to avoid anything even potentially fragile.
