@@ -8,6 +8,9 @@
 	exit, the profiler no longer hangs when ROOT calls "exit()" from
 	signal handlers, threads are not closed and destructors run.
 
+	* IgProfPool.h, IgProfPool.cc, IgProfFileDesc.cc, IgProfMem.cc,
+	IgProfPerf.cc: Adjust to using IgProfTrace.
+
 2007-03-13  Lassi A. Tuura  <lat@iki.fi>
 
 	* igprof-analyse (igprof_filter_by_lib_pre): Fix typo.
